stop scrolling behind modal

--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -105,7 +105,7 @@ header, footer {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.4);
 
 }
@@ -116,7 +116,10 @@ header, footer {
   padding: 20px 100px;
   border: 1px solid #888;
   width: 80%;
-  /* height: 60%; */
+  max-height: 70%;
+  overflow: hidden;
+  display:flex;
+  flex-direction: column;
   animation: 0.3s ease-in 0s movement;
 }
 
@@ -142,6 +145,10 @@ header, footer {
    cursor: pointer;
 } 
 
+/* Prevent body scrolling when modal is open */
+body.opened {
+  overflow: hidden;
+}
 
 /* Modal Styling */
 #playlist-modal-photo {
@@ -150,7 +157,6 @@ header, footer {
   width: 20%;
   height: 0%;
   aspect-ratio: 1/1;
-
   margin-right: 20px;
 }
 
@@ -191,7 +197,7 @@ header, footer {
 #playlist-songs {
   overflow: scroll;
   height: 100%;
-  margin-bottom: 1%;
+  margin-top: 1%;
 }
 
 #like-btn {
